<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>de.tu-berlin</groupId>
	<artifactId>zeroCUTS</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>zeroCUTS project</name>
	<description>zeroCUTS project</description>

	<properties>
		<matsim.version>15.0-PR2457</matsim.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.release>17</maven.compiler.release>
		<argLine/>
		

	</properties>

	<repositories>

		<!-- Geotools is not on Maven central -->
		<repository>
			<id>osgeo</id>
			<name>OSGeo Release Repository</name>
			<url>https://repo.osgeo.org/repository/release/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>

		<!-- Repository for MATSim releases (MATSim is not on Maven central) -->
		<repository>
			<id>matsim</id>
			<url>https://repo.matsim.org/repository/matsim</url>
		</repository>

	</repositories>

	<dependencies>

		<!-- This is the matsim "core": -->
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>${matsim.version}</version>
		</dependency>

		<!-- This is the matsim freight contrib: -->
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>freight</artifactId>
			<version>${matsim.version}</version>
			<!--<scope>compile</scope> -->
		</dependency>
		
		<!-- This is the matsim vsp contrib: -->
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>vsp</artifactId>
			<version>${matsim.version}</version>
			<!--<scope>compile</scope> -->
		</dependency>

		<!-- This is the matsim application contrib: -->
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>application</artifactId>
			<version>${matsim.version}</version>
			<!--<scope>compile</scope> -->
		</dependency>


		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>emissions</artifactId>
			<version>${matsim.version}</version>
		</dependency>


		<!-- Include the JUnit testing library. Not transitive. -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>

		<!--MATSim test infrastructure. Not transitive. -->
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<type>test-jar</type>
			<version>${matsim.version}</version>
			<scope>test</scope>
		</dependency>


	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<properties>
						<property>
							<name>listener</name>
							<value>org.matsim.api.core.v01.AutoResetIdCaches</value>
						</property>
					</properties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<properties>
						<property>
							<name>listener</name>
							<value>org.matsim.api.core.v01.AutoResetIdCaches</value>
						</property>
					</properties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<outputFile>${project.basedir}/${project.build.finalName}.jar</outputFile>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<!--suppress UnresolvedMavenProperty -->
										<Main-Class>${mainClass}</Main-Class>
										<Specification-Vendor>org.matsim</Specification-Vendor>
										<Implementation-Vendor>org.matsim</Implementation-Vendor>
										<Implementation-Version>${project.version}</Implementation-Version>
									</manifestEntries>
								</transformer>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
							</transformers>
							<filters>
								<!-- Avoid signature checking -->
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
								<!-- Force some inclusion because of minimizing -->
								<filter>
									<artifact>org.apache.logging.log4j:*</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
								<filter>
									<artifact>xerces:*</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
								<filter>
									<artifact>org.hibernate.validator:*</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
								<filter>
									<artifact>org.glassfish:*</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
							</filters>
							<minimizeJar>false</minimizeJar>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>3.0.0-M7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.2.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.0.0-M1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.4.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
